<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#27000000" >

    <TextView
        android:id="@+id/kq_none_tip_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/kq_no_info_tip"
        android:textColor="#000000" />

    <ListView
        android:id="@+id/info_lsv"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/rel_menu"
        android:scrollbars="none"
        android:background="#ffffff"
        android:visibility="invisible" >
    </ListView>

    <LinearLayout
        android:id="@+id/info_add"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_btn"
        android:clickable="true"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/info_add"
            android:textColor="@color/color_black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rel_menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/color_bg"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/info_menu_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/btn_delete"
            android:textColor="@color/color_blue"
            android:textSize="20sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/color_blue" />

        <TextView
            android:id="@+id/info_menu_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/btn_cancel"
            android:textColor="@color/color_blue"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/info_add_user_bg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="20dp"
        android:visibility="invisible" >

        <ListView
            android:id="@+id/info_add_user_lsv"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#ffffff" >
        </ListView>
    </RelativeLayout>

</RelativeLayout>